grammar.js
    source: ($) => repeat($.source_line),
    source_line: ($) =>
      seq(
        choice(
          field("symbol", $._symbol),
          field("label", $._label),
          field("inst", $._inst),
          seq(field("label", $._label), field("inst", $._inst)),
        ),
        token(prec(1, /\r?\n/)),
      ),

    // Symbols
    _symbol: ($) => choice($.symbol_eq, $.symbol_assign, $.symbol_set),
    symbol_eq: ($) =>
      seq(
        // Higher precedence than equal operator
        prec(100, seq(field("name", $.symbol), "=")),
        field("expr", $._expression),
      ),
    _label: ($) => choice($.label, $.local_label, $.unnamed_label),
    local_label_body: ($) => seq("@", $._identifier),

    // Instruction
    _inst: ($) => choice($.macro_inst, $.actual_inst, $._pseudo_inst),

    // Macro instruction
    macro_inst: ($) =>
      seq(field("name", $.macro_inst_name), optional($._macro_inst_args)),
    macro_inst_name: ($) => prec(1, $._identifier), // Higher precedence than macro_call_name
    _macro_inst_args: ($) =>
      seq(
        field("arg", $._macro_inst_arg),
        optional(seq(",", $._macro_inst_args)),
      ),
    macro_inst_arg_raw: (_) => token(prec(-1, /[^(\r?\n)\,]*/)),
    macro_inst_arg_enclosed: (_) => token(prec(-1, /[^(\r?\n)\}]*/)),

    // Actual instructions
    actual_inst: ($) => {
      const opcodes = [
        $.opcode_adc,
        $.opcode_and,
        $.opcode_asl,
        $.opcode_bcc,
        $.opcode_bcs,
        $.opcode_beq,
        $.opcode_bit,
        $.opcode_bmi,
        $.opcode_bne,
        $.opcode_bpl,
        $.opcode_brk,
        $.opcode_bvc,
        $.opcode_bvs,
        $.opcode_clc,
        $.opcode_cld,
        $.opcode_cli,
        $.opcode_clv,
        $.opcode_cmp,
        $.opcode_cpx,
        $.opcode_cpy,
        $.opcode_dec,
        $.opcode_dex,
        $.opcode_dey,
        $.opcode_eor,
        $.opcode_inc,
        $.opcode_inx,
        $.opcode_iny,
        $.opcode_jmp,
        $.opcode_jsr,
        $.opcode_lda,
        $.opcode_ldx,
        $.opcode_ldy,
        $.opcode_lsr,
        $.opcode_nop,
        $.opcode_ora,
        $.opcode_pha,
        $.opcode_php,
        $.opcode_pla,
        $.opcode_plp,
        $.opcode_rol,
        $.opcode_ror,
        $.opcode_rti,
        $.opcode_rts,
        $.opcode_sbc,
        $.opcode_sec,
        $.opcode_sed,
        $.opcode_sei,
        $.opcode_sta,
        $.opcode_stx,
        $.opcode_sty,
        $.opcode_tax,
        $.opcode_tay,
        $.opcode_tsx,
        $.opcode_txa,
        $.opcode_txs,
        $.opcode_tya,
      ];
      const operands = [
        $.operand_imm,
        $.operand_a,
        $.operand_addr,
        $.operand_addr_x,
        $.operand_addr_y,
        $.operand_indirect,
        $.operand_x_indirect,
        $.operand_indirect_y,
      ];
      return choice(
        ...product(opcodes, operands).map(([opcode, operand]) => {
          return seq(
            field("opcode", opcode),
            optional(field("operand", operand)),
          );
        }),
      );
    },

    // Operands
    operand_imm: ($) => seq("#", field("expr", $._expression)),
    operand_a: ($) => field("reg", $.register_a),
    operand_addr: ($) => field("addr", $._expression),
    operand_addr_x: ($) =>
      seq(field("addr", $._expression), ",", field("reg", $.register_x)),
    operand_addr_y: ($) =>
      seq(field("addr", $._expression), ",", field("reg", $.register_y)),
    operand_indirect: ($) =>
      prec(
        1, // Higher precedence thant (expression)
        seq("(", field("addr", $._expression), ")"),
      ),
    operand_x_indirect: ($) =>
      prec(
        1, // Higher precedence thant (expression)
        seq(
          "(",
          field("addr", $._expression),
          ",",
          field("reg", $.register_x),
          ")",
        ),
      ),
    operand_indirect_y: ($) =>
      prec(
        1, // Higher precedence thant (expression)
        seq(
          "(",
          field("addr", $._expression),
          ")",
          ",",
          field("reg", $.register_y),
        ),
      ),

    // Registers
    register_a: (_) => make_case_insentive("a"),
    register_x: (_) => make_case_insentive("x"),
    register_y: (_) => make_case_insentive("y"),

    // Opcodes
    opcode_inc: (_) => make_opcode("inc"),
    opcode_inx: (_) => make_opcode("inx"),
    opcode_jmp: (_) => make_opcode("jmp"),
    opcode_lda: (_) => make_opcode("lda"),
    pseudo_inst_a16: ($) => $.dot_keyword_a16,

    // .a8
    pseudo_inst_a8: ($) => $.dot_keyword_a8,

    // .addr
    _expression: ($) =>
      choice($.unary_expression, $.binary_expression, $._primary_expression),

    // Unary expression
    binary_expression: ($) => {
      const table = [
        { op: "*", prec: PREC.OP.BINARY.MUL },
        { op: "/", prec: PREC.OP.BINARY.DIV },
        { op: $.dot_keyword_mod, prec: PREC.OP.BINARY.MOD },
        { op: "&", prec: PREC.OP.BINARY.BITAND },
        { op: $.dot_keyword_bitand, prec: PREC.OP.BINARY.BITAND },
        { op: "^", prec: PREC.OP.BINARY.BITXOR },
        { op: $.dot_keyword_bitxor, prec: PREC.OP.BINARY.BITXOR },
        { op: "<<", prec: PREC.OP.BINARY.LSHIFT },
        { op: $.dot_keyword_shl, prec: PREC.OP.BINARY.LSHIFT },
        { op: ">>", prec: PREC.OP.BINARY.RSHIFT },
        { op: $.dot_keyword_shr, prec: PREC.OP.BINARY.RSHIFT },
        { op: "+", prec: PREC.OP.BINARY.ADD },
        { op: "-", prec: PREC.OP.BINARY.SUB },
        { op: "|", prec: PREC.OP.BINARY.BITOR },
        { op: $.dot_keyword_bitor, prec: PREC.OP.BINARY.BITOR },
        { op: "=", prec: PREC.OP.BINARY.EQ },
        { op: "<>", prec: PREC.OP.BINARY.NE },
        { op: "<", prec: PREC.OP.BINARY.LT },
        { op: ">", prec: PREC.OP.BINARY.GT },
        { op: "<=", prec: PREC.OP.BINARY.LE },
        { op: ">=", prec: PREC.OP.BINARY.GE },
        { op: "&&", prec: PREC.OP.BINARY.AND },
        { op: $.dot_keyword_and, prec: PREC.OP.BINARY.AND },
        { op: "||", prec: PREC.OP.BINARY.OR },
        { op: $.dot_keyword_or, prec: PREC.OP.BINARY.OR },
      ];
      return choice(
        ...table.map((item) => {
          return prec.left(
            item.prec,
            seq(
              field("lhs", $._expression),
              field("op", item.op),
              field("rhs", $._expression),
            ),
          );
        }),
      );
    },

    pseudo_func_addrsize: ($) =>
      seq($.dot_keyword_addrsize, "(", field("symbol", $.symbol), ")"),

    // .bank
    pseudo_func_bank: ($) =>
      seq($.dot_keyword_bank, "(", field("symbol", $.symbol), ")"),

    // .bankbyte
    pseudo_func_bankbyte: ($) =>
      seq($.dot_keyword_bankbyte, "(", field("expr", $._expression), ")"),

    // .blank
    pseudo_func_blank: ($) =>
      seq(
        $.dot_keyword_blank,
        "(",
        field("tokens", $.pseudo_func_blank_tokens),
        ")",
      ),
    pseudo_func_blank_tokens: (_) => /[^\)]*/,

    // .capability
    pseudo_func_capability: ($) =>
      seq(
        $.dot_keyword_capability,
        "(",
        optional($._pseudo_func_capability_args),
        ")",
      ),
    _pseudo_func_capability_args: ($) =>
      seq(
        field("name", $.pseudo_func_capability_name),
        optional(seq(",", $._pseudo_func_capability_args)),
      ),
    pseudo_func_capability_name: (_) =>
      choice(
        make_case_insentive("cpu_has_bitimm"),
        make_case_insentive("cpu_has_brab"),
        make_case_insentive("cpu_has_ina"),
        make_case_insentive("cpu_has_pushxy"),
        make_case_insentive("cpu_has_zpind"),
        make_case_insentive("cpu_has_stz"),
      ),

    // .concat
    pseudo_func_concat: ($) =>
      seq($.dot_keyword_concat, "(", optional($._pseudo_func_concat_args), ")"),
    _pseudo_func_concat_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_func_concat_args)),
      ),

    // .const
    pseudo_func_const: ($) =>
      seq($.dot_keyword_const, "(", field("expr", $._expression), ")"),

    // .defined
    pseudo_func_defined: ($) =>
      seq($.dot_keyword_defined, "(", field("name", $.symbol), ")"),

    // .definedmacro
    pseudo_func_definedmacro: ($) =>
      seq($.dot_keyword_definedmacro, "(", field("name", $.symbol), ")"),

    // .hibyte
    pseudo_func_hibyte: ($) =>
      seq($.dot_keyword_hibyte, "(", field("expr", $._expression), ")"),

    // .hiword
    pseudo_func_hiword: ($) =>
      seq($.dot_keyword_hiword, "(", field("expr", $._expression), ")"),

    // .ident
    pseudo_func_ident: ($) =>
      seq($.dot_keyword_ident, "(", field("expr", $._expression), ")"),

    // .ismnemonic
    pseudo_func_ismnemonic: ($) =>
      seq($.dot_keyword_ismnemonic, "(", field("name", $.symbol), ")"),

    // .left
    pseudo_func_left: ($) =>
      seq(
        $.dot_keyword_left,
        "(",
        field("count", $._expression),
        ",",
        field("tokens", $._pseudo_func_left_tokens),
        ")",
      ),
    _pseudo_func_left_tokens: ($) =>
      choice(
        prec(1, seq("{", $.pseudo_func_left_tokens_enclosed, "}")),
        $.pseudo_func_left_tokens_raw,
      ),
    pseudo_func_left_tokens_enclosed: (_) => token(prec(-1, /[^\}]*/)),
    pseudo_func_left_tokens_raw: (_) => token(prec(-1, /[^\)]*/)),

    // .lobyte
    pseudo_func_lobyte: ($) =>
      seq($.dot_keyword_lobyte, "(", field("expr", $._expression), ")"),

    // .loword
    pseudo_func_loword: ($) =>
      seq($.dot_keyword_loword, "(", field("expr", $._expression), ")"),

    // .match
    pseudo_func_match: ($) =>
      seq(
        $.dot_keyword_match,
        "(",
        field("lhs", $._pseudo_func_match_lhs),
        ",",
        field("rhs", $._pseudo_func_match_rhs),
        ")",
      ),
    _pseudo_func_match_lhs: ($) =>
      choice(
        $.pseudo_func_match_lhs_raw,
        seq("{", $.pseudo_func_match_lhs_enclosed, "}"),
      ),
    pseudo_func_match_lhs_raw: (_) => token(prec(-1, /[^,]*/)),
    pseudo_func_match_lhs_enclosed: (_) => token(prec(-1, /[^}]*/)),
    _pseudo_func_match_rhs: ($) =>
      choice(
        $.pseudo_func_match_rhs_raw,
        seq("{", $.pseudo_func_match_rhs_enclosed, "}"),
      ),
    pseudo_func_match_rhs_raw: (_) => token(prec(-1, /[^)]*/)),
    pseudo_func_match_rhs_enclosed: (_) => token(prec(-1, /[^}]*/)),

    // .max
    pseudo_func_max: ($) =>
      seq(
        $.dot_keyword_max,
        "(",
        field("lhs", $._expression),
        ",",
        field("rhs", $._expression),
        ")",
      ),

    // .mid
    pseudo_func_mid: ($) =>
      seq(
        $.dot_keyword_mid,
        "(",
        field("start", $._expression),
        ",",
        field("end", $._expression),
        ",",
        field("tokens", $._pseudo_func_mid_tokens),
        ")",
      ),
    _pseudo_func_mid_tokens: ($) =>
      choice(
        $.pseudo_func_mid_tokens_raw,
        seq("{", $.pseudo_func_mid_tokens_enclosed, "}"),
      ),

    // .min
    pseudo_func_min: ($) =>
      seq(
        $.dot_keyword_min,
        "(",
        field("lhs", $._expression),
        ",",
        field("rhs", $._expression),
        ")",
      ),
    pseudo_func_mid_tokens_enclosed: (_) => token(prec(-1, /[^\}]*/)),
    pseudo_func_mid_tokens_raw: (_) => token(prec(-1, /[^\)]*/)),

    // .referenced
    pseudo_func_referenced: ($) =>
      seq($.dot_keyword_referenced, "(", field("symbol", $.symbol), ")"),

    // .right
    pseudo_func_right: ($) =>
      seq(
        $.dot_keyword_right,
        "(",
        field("count", $._expression),
        ",",
        field("tokens", $._pseudo_func_right_tokens),
        ")",
      ),
    _pseudo_func_right_tokens: ($) =>
      choice(
        prec(1, seq("{", $.pseudo_func_right_tokens_enclosed, "}")),
        $.pseudo_func_right_tokens_raw,
      ),
    pseudo_func_right_tokens_enclosed: (_) => token(prec(-1, /[^\}]*/)),
    pseudo_func_right_tokens_raw: (_) => token(prec(-1, /[^\)]*/)),

    // .sizeof
    pseudo_func_sizeof: ($) =>
      seq(
        $.dot_keyword_sizeof,
        "(",
        field("target", choice($.symbol, $.local_label_literal, $.member)),
        ")",
      ),

    // .sprintf
    pseudo_func_sprintf: ($) =>
      seq(
        $.dot_keyword_sprintf,
        "(",
        field("fmt", $.string),
        optional(seq(",", $._pseudo_func_sprintf_args)),
        ")",
      ),
    _pseudo_func_sprintf_args: ($) =>
      seq(
        field("arg", $._expression),
        optional(seq(",", $._pseudo_func_sprintf_args)),
      ),

    // .start
    pseudo_func_start: ($) =>
      seq(
        $.dot_keyword_start,
        "(",
        field("string", $._expression),
        ",",
        field("offset", $._expression),
        ")",
      ),

    // .string
    pseudo_func_string: ($) =>
      seq($.dot_keyword_string, "(", field("expr", $._expression), ")"),

    // .strlen
    pseudo_func_strlen: ($) =>
      seq($.dot_keyword_strlen, "(", field("string", $._expression), ")"),

    // .tcount
    pseudo_func_tcount: ($) =>
      seq(
        $.dot_keyword_tcount,
        "(",
        field("tokens", $._pseudo_func_tcount_tokens),
        ")",
      ),
    _pseudo_func_tcount_tokens: ($) =>
      choice(
        prec(1, seq("{", $.pseudo_func_tcount_tokens_enclosed, "}")),
        $.pseudo_func_tcount_tokens_raw,
      ),
    pseudo_func_tcount_tokens_enclosed: (_) => token(prec(-1, /[^\}]*/)),
    pseudo_func_tcount_tokens_raw: (_) => token(prec(-1, /[^\)]*/)),

    // .xmatch
    pseudo_func_xmatch: ($) =>
      seq(
        $.dot_keyword_xmatch,
        "(",
        field("lhs", $._pseudo_func_xmatch_lhs),
        ",",
        field("rhs", $._pseudo_func_xmatch_rhs),
        ")",
      ),
    _pseudo_func_xmatch_lhs: ($) =>
      choice(
        $.pseudo_func_xmatch_lhs_raw,
        seq("{", $.pseudo_func_xmatch_lhs_enclosed, "}"),
      ),
    pseudo_func_xmatch_lhs_raw: (_) => token(prec(-1, /[^,]*/)),
    pseudo_func_xmatch_lhs_enclosed: (_) => token(prec(-1, /[^}]*/)),
    _pseudo_func_xmatch_rhs: ($) =>
      choice(
        $.pseudo_func_xmatch_rhs_raw,
        seq("{", $.pseudo_func_xmatch_rhs_enclosed, "}"),
      ),
    pseudo_func_xmatch_rhs_raw: (_) => token(prec(-1, /[^)]*/)),
    pseudo_func_xmatch_rhs_enclosed: (_) => token(prec(-1, /[^}]*/)),

    // Macro call
    macro_call: ($) =>
      seq(field("name", $.macro_call_name), $._macro_call_args),
    macro_call_name: ($) => $._identifier,
    _macro_call_args: ($) =>
      prec.left(
        seq(
          field("arg", $._macro_call_arg),
          optional(seq(",", $._macro_call_args)),
        ),
      ),
    macro_call_arg_raw: (_) => token(prec(-1, /[^(\r?\n)\,]*/)),
    macro_call_arg_enclosed: (_) => token(prec(-1, /[^(\r?\n)\}]*/)),

    // Dot keywords used by pseudo instructions
    dot_keyword_a16: (_) => make_keyword(".a16"),
    dot_keyword_a8: (_) => make_keyword(".a8"),
    dot_keyword_addrsize: (_) => make_keyword(".addrsize"),
    dot_keyword_bank: (_) => make_keyword(".bank"),
    dot_keyword_bankbyte: (_) => make_keyword(".bankbyte"),
    dot_keyword_blank: (_) => make_keyword(".blank"),
    dot_keyword_capability: (_) =>
      choice(make_keyword(".cap"), make_keyword(".capability")),
    dot_keyword_concat: (_) => make_keyword(".concat"),
    dot_keyword_const: (_) => make_keyword(".const"),
    dot_keyword_defined: (_) =>
      choice(make_keyword(".def"), make_keyword(".defined")),
    dot_keyword_definedmacro: (_) => make_keyword(".definedmacro"),
    dot_keyword_hibyte: (_) => make_keyword(".hibyte"),
    dot_keyword_hiword: (_) => make_keyword(".hiword"),
    dot_keyword_ident: (_) => make_keyword(".ident"),
    dot_keyword_ismnemonic: (_) =>
      choice(make_keyword(".ismnem"), make_keyword(".ismnemonic")),
    dot_keyword_left: (_) => make_keyword(".left"),
    dot_keyword_lobyte: (_) => make_keyword(".lobyte"),
    dot_keyword_loword: (_) => make_keyword(".loword"),
    symbol: ($) => $._identifier,
