test/corpus/expr/pseudo/func/addrsize.txt
==================================================
ADDRSIZE pseudo function
==================================================

name = .addrsize(name)

--------------------------------------------------

(source
 (source_line
  symbol: (symbol_eq
      name: (symbol)
      expr: (pseudo_func_addrsize
          (dot_keyword_addrsize)
          symbol: (symbol)))))
