test/corpus/expr/pseudo/func/lobyte.txt
==================================================
LOBYTE pseudo function
==================================================

name = .lobyte($10 + $20)

--------------------------------------------------

(source
 (source_line
  symbol: (symbol_eq
      name: (symbol)
      expr: (pseudo_func_lobyte
          (dot_keyword_lobyte)
          expr: (binary_expression
              lhs: (number)
              rhs: (number))))))
