test/corpus/expr/pseudo/func/strlen.txt
==================================================
STRLEN pseudo function
==================================================

name = .strlen("string")

--------------------------------------------------

(source
 (source_line
  symbol: (symbol_eq
      name: (symbol)
      expr: (pseudo_func_strlen
          (dot_keyword_strlen)
          string: (string)))))
