test/corpus/inst/actual/addr_y.txt
==================================================
actual instruction of operand addr y
==================================================

lda $00, y

--------------------------------------------------
